[package]
name = "rps"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-session = { version = "0.10", features = ["redis-session"] }
actix-identity = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"
dotenv = "0.15.0"
env_logger = "0.11"
log = "0.4"